Redirect Job + Gantt Update

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
             "enableLongRunningSqlStatements": true,
             "enableSqlInformationDebugger":true,
             "longRunningSqlStatementsThreshold":500,
-            "schemaUpdateMode":"ForceSync"
+            "schemaUpdateMode":"ForceSync",
+            "startupObjectId": 50699
         }
     ]
 }
